--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta< charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Four Divs</title>
-    <link rel="stylesheet" src="./style.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    
+    <main>
+      <div id="one">
+        <button>Change Background Color</button>
+      </div>
+      <div id="two">
+        <button>Hello In</button>
+      </div>
+      <div id="three">
+        <button>TBD</button>
+      </div>
+      <div id="four">
+        <button>TBD</button>
+      </div>
+    </main>
   </body>
 </html>
