--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Four Divs</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="./index.js"></script>
   </head>
   <body>
     <main>
-      <div id="one">
-        <button>Change Background Color</button>
+      <div id="bgColorContainer">
+        <button id="bgColorBtn" onclick="changeBgColor()">Change Background Color</button>
       </div>
       <div id="two">
         <button>Hello In</button>
