hello div function complete

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       <div id="bgColorContainer">
         <button id="bgColorBtn" onclick="changeBgColor()">Change Background Color</button>
       </div>
-      <div id="two">
-        <button>Hello In</button>
+      <div id="hello-container">
+          <button id="hello-btn" onclick="newHello()">Hello In</button>
+          <h2 id="say-hello"></h2>
       </div>
       <div id="three">
         <button>TBD</button>
