--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Four Divs</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./index.js"></script>
   </head>
   <body>
     <main>
@@ -16,12 +15,16 @@
           <button id="hello-btn" onclick="newHello()">Hello In</button>
           <h2 id="say-hello"></h2>
       </div>
-      <div id="three">
-        <button>TBD</button>
+      <div id="add-container">
+        <input type="number" id="num-one" placeholder="First Number">
+        <input type="number" id="num-two" placeholder="Second Number">
+        <button id="add-btn">Add 'em Up</button>
+        <h2 id="total"></h2>
       </div>
       <div id="four">
         <button>TBD</button>
       </div>
     </main>
   </body>
+  <script src="./index.js"></script>
 </html>
