whisper function complete

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <button id="add-btn">Add 'em Up</button>
         <h2 id="total"></h2>
       </div>
-      <div id="four">
-        <button>TBD</button>
+      <div id="whisper-container">
+        <input type="text" id="whisper-input" placeholder="Type Here">
+        <button id="whisper-btn">whisper!</button>
+        <div id="the-whispers"></div>
       </div>
     </main>
   </body>
